--- a/BookStore.Web/Views/Category/Index.cshtml
+++ b/BookStore.Web/Views/Category/Index.cshtml
@@ -1,1 +1,20 @@
-﻿<h1>Category List</h1>
+﻿@model IEnumerable<Category>
+
+<h1>Category List</h1>
+<table class="table table-bordered table-striped">
+    <thead>
+        <tr>
+            <th>Category Name</th>
+            <th>Display Order</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (Category category in this.Model.OrderBy((c) => c.DisplayOrder))
+        {
+            <tr>
+                <td>@category.Name</td>
+                <td>@category.DisplayOrder</td>
+            </tr>
+        }
+    </tbody>
+</table>
