--- a/BookStore.Web/Views/Category/Index.cshtml
+++ b/BookStore.Web/Views/Category/Index.cshtml
@@ -6,7 +6,7 @@
             <h1 class="text-primary">Category List</h1>
         </div>
         <div class="col-6 text-end">
-            <a class="btn btn-primary"><i class="bi bi-plus"></i> Create New Category</a>
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary"><i class="bi bi-plus"></i> Create New Category</a>
         </div>
     </div>
 </div>
