--- a/BookStore.Web/Views/Category/Index.cshtml
+++ b/BookStore.Web/Views/Category/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<Category>
-
 <div class="container">
     <div class="row pt-4 pb-2">
         <div class="col-6">
@@ -16,6 +15,7 @@
         <tr>
             <th>Category Name</th>
             <th>Display Order</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -24,6 +24,16 @@
             <tr>
                 <td>@category.Name</td>
                 <td>@category.DisplayOrder</td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id=@category.Id class="btn btn-primary mx-2">
+                            <i class="bi bi-pencil-square"></i> Edit
+                        </a>
+                        <a asp-controller="Category" asp-action="Delete" asp-route-id=@category.Id class="btn btn-danger mx-2">
+                            <i class="bi bi-trash-fill"></i> Delete
+                        </a>
+                    </div>
+                </td>
             </tr>
         }
     </tbody>
