--- a/BookStore.Web/Areas/Customer/Views/_ViewImports.cshtml
+++ b/BookStore.Web/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using BookStore.Web
-@using BookStore.Web.Models
+@using BookStore.Web.ViewModels
 @using BookStore.Infrastructure.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
