--- a/BookStore.Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/BookStore.Web/Areas/Admin/Views/Product/Index.cshtml
@@ -43,7 +43,7 @@
                                 <a asp-controller="Product" asp-action="Edit" asp-route-id="@product.Id" class="btn btn-primary mx-2">
                                     <i class="bi bi-pencil-square"></i> Edit
                                 </a>
-                                <a asp-controller="Category" asp-action="Delete" asp-route-id="@product.Id" class="btn btn-danger mx-2">
+                                <a asp-controller="Product" asp-action="Delete" asp-route-id="@product.Id" class="btn btn-danger mx-2">
                                     <i class="bi bi-trash-fill"></i> Delete
                                 </a>
                             </div>
