--- a/BookStore.Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/BookStore.Web/Areas/Admin/Views/Product/Index.cshtml
@@ -18,7 +18,7 @@
                 </a>
             </div>
         </div>
-        <table class="table table-bordered table-striped">
+        <table id="table-data" class="table table-bordered table-striped" style="width: 100%;">
             <thead>
                 <tr>
                     <th>Title</th>
@@ -29,28 +29,10 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
-                @foreach (ProductViewModel product in this.Model)
-                {
-                    <tr>
-                        <td>@product.Title</td>
-                        <td>@product.ISBN</td>
-                        <td>@product.ListPrice</td>
-                        <td>@product.Author</td>
-                        <td></td>
-                        <td>
-                            <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Product" asp-action="Upsert" asp-route-id="@product.Id" class="btn btn-primary mx-2">
-                                    <i class="bi bi-pencil-square"></i> Edit
-                                </a>
-                                <a asp-controller="Product" asp-action="Delete" asp-route-id="@product.Id" class="btn btn-danger mx-2">
-                                    <i class="bi bi-trash-fill"></i> Delete
-                                </a>
-                            </div>
-                        </td>
-                    </tr>
-                }
-            </tbody>
         </table>
     </div>
 </div>
+
+@section Scripts {
+    <script src="~/js/product.js"></script>
+}
