--- a/BookStore.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BookStore.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -31,6 +31,11 @@
                         <label asp-for="Input.ConfirmPassword" class="ms-2 text-muted">Confirm Password</label>
                         <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                     </div>
+                    <div class="form-floating mb-3 col-md-6">
+                        <select asp-for="Input.Role" asp-items="@this.Model.Input.Roles" class="form-select">
+                            <option disabled selected>-Select Role-</option>
+                        </select>
+                    </div>
                     <div class="col-12">
                         <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
                     </div>
