--- a/BookStore.Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/BookStore.Web/Areas/Admin/Views/Product/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model IEnumerable<ProductViewModel>
-
-<div class="card shadow border-0 mt-4">
+﻿<div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
